[package]
name = "release-channels-proof-of-concept"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dev-channel-macro = { path = "crates/dev-channel-macro" }

[build-dependencies]
dev-channel = { path = "crates/dev-channel" }

[features]
default = []

unstable-futures = []

[workspace]
members = [
    "crates/dev-channel",
    "crates/dev-channel-macro"
]
