[package]
name = "release-channels-proof-of-concept"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracks = { path = "crates/tracks" }

[build-dependencies]
tracks-env = { path = "crates/tracks-env" }

[features]
default = []

unstable-futures = []

[workspace]
members = [
    "crates/tracks",
    "crates/tracks-env",
]
