[package]
name = "dev-channel-macro"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.5"
quote = "1.0.2"
proc-macro2 = "1.0.2"
dev-channel = { path = "../dev-channel" }
